--- a/my-react-app/src/Components/Sidebar/Sidebar.css
+++ b/my-react-app/src/Components/Sidebar/Sidebar.css
@@ -32,10 +32,14 @@
   font-size: 1.3rem;
 }
 
-.sidebar-links.active {
+.sidebar-links .active {
   background-color: #321588;
 }
 
 .sidebar-links li:first-child {
   margin-bottom: 20px;
+}
+
+.icon {
+  margin-left: 10px;
 }
