--- a/my-react-app/src/Components/DeleteModal/DeleteModal.css
+++ b/my-react-app/src/Components/DeleteModal/DeleteModal.css
@@ -1,25 +1,3 @@
-.modal-parent {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.4s;
-}
-
-.modal-parent.active {
-  visibility: visible;
-  opacity: 1;
-}
-
 .delete-modal {
   background-color: white;
   padding: 50px;
@@ -43,6 +21,7 @@
   border: none;
   outline: none;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .delete-modal-accept-btn {
