--- a/my-react-app/src/custom.css
+++ b/my-react-app/src/custom.css
@@ -20,3 +20,41 @@ body {
 * {
   font-family: Lalehzar !important;
 }
+
+.modal-parent {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s;
+}
+
+.modal-parent.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.cms-table {
+  margin-top: 20px;
+  width: 100%;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.cms-table tr {
+  text-align: center;
+}
+
+.cms-table th,
+.cms-table td {
+  padding: 20px;
+}
