--- a/my-react-app/frontend/src/Components/ProductsTable/ProductTable.css
+++ b/my-react-app/frontend/src/Components/ProductsTable/ProductTable.css
@@ -44,3 +44,25 @@
   margin-right: 20px;
   cursor: pointer;
 }
+
+/* edit Modal Styles */
+
+.edit-product-form {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  background-color: #f4f4f4;
+  padding: 0 20px;
+  border-radius: 5px;
+}
+
+.edit-product-form input {
+  height: 35px;
+  outline: none;
+  border: none;
+  background-color: unset;
+  font-size: 1.3rem;
+  width: 100%;
+  padding: 8px 10px;
+}
