--- a/my-react-app/frontend/src/Components/EditModal/EditModal.css
+++ b/my-react-app/frontend/src/Components/EditModal/EditModal.css
@@ -8,6 +8,11 @@
 
 .edit-modal-form h1 {
   font-size: 1.4rem;
+  margin-bottom: 20px;
+}
+.edit-modal-form textarea {
+  padding: 5px;
+  width: 80%;
 }
 
 .edit-form-submit {
