--- a/my-react-app/frontend/src/Components/Sidebar/Sidebar.css
+++ b/my-react-app/frontend/src/Components/Sidebar/Sidebar.css
@@ -17,13 +17,12 @@
   margin-top: 20px;
 }
 
-.sidebar-links li {
+.sidebar-links a {
   position: relative;
   padding: 15px;
 }
 
 .sidebar-links a {
-  width: 100%;
   color: var(--white);
   text-decoration: none;
   display: flex;
@@ -32,11 +31,16 @@
   font-size: 1.3rem;
 }
 
-.sidebar-links .active {
+.sidebar-links a:hover {
+  background-color: #321588;
+  color: white;
+}
+
+.sidebar-links a.active {
   background-color: #321588;
 }
 
-.sidebar-links li:first-child {
+.sidebar-links a:first-child {
   margin-bottom: 20px;
 }
 
