--- a/my-react-app/frontend/src/custom.css
+++ b/my-react-app/frontend/src/custom.css
@@ -36,6 +36,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: 0.4s;
+  overflow: scroll;
 }
 
 .modal-parent.active {
@@ -47,6 +48,11 @@ body {
   margin-top: 60px;
   padding: 20px;
   border-radius: 25px;
+}
+
+.cms-title {
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 .cms-table {
@@ -63,4 +69,14 @@ body {
 .cms-table th,
 .cms-table td {
   padding: 20px;
+}
+
+button {
+  padding: 8px 20px;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  color: white;
+  background-color: var(--blue);
+  margin-right: 20px;
+  cursor: pointer;
 }
